// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows size override 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    style={
      Object {
        "alignContent": "center",
        "alignItems": "center",
      }
    }
  >
    <SvgXml
      color="#606060"
      height={48}
      width={48}
      xml="<g />"
    />
  </TouchableOpacity>
</View>
`;

exports[`renders the icon in a touchable opacity 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    accessibilityLabel="Label"
    activeOpacity={0.2}
    style={
      Object {
        "alignContent": "center",
        "alignItems": "center",
      }
    }
  >
    <SvgXml
      color="#606060"
      height={24}
      width={24}
      xml="<g />"
    />
  </TouchableOpacity>
</View>
`;
